keycloak/keycloak-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  labels:
    app: keycloak-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: keycloak-db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: keycloak-db-storage
          persistentVolumeClaim:
            claimName: keycloak-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db-service
  labels:
    app: keycloak-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: keycloak-db
