keycloak/keycloak-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  labels:
    app: keycloak
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:20.0.2
          volumeMounts:
            - name: tls
              mountPath: "/etc/ssl"
              readOnly: true
          args: ["start"]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /realms/master
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 1
      volumes:
        - name: tls
          secret:
            secretName: my-tls
            optional: false
